--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,33 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap");
+
+html {
+  font-family: "Poppins", sans-serif;
+}
+
+.theme-dark {
   background-color: black;
   color: white;
+}
+
+.theme-light {
+  background-color: white;
+  color: black;
+}
+
+#nav-icon {
+  margin-left: 0.69%;
+  font-size: xx-large;
+}
+
+#theme-btn {
+  background: none;
+  border: none;
+  padding: 0px;
+  float: right;
+}
+#theme-btn-img {
+  vertical-align: middle;
+  border-radius: 40%;
 }
 
 #wah {
