--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,11 @@ html {
   font-family: "Poppins", sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
 .theme-dark {
   background-color: black;
   color: white;
@@ -10,21 +15,10 @@ html {
   color: white;
 }
 
-.theme-light {
-  background-color: white;
-  color: black;
-}
-.theme-light a {
-  color: black;
-}
-
-#nav-icon {
-  margin-left: 0.69%;
-  font-size: xx-large;
-}
-
 #theme-btn {
-  float: right;
+  position: absolute;
+  top: 1.69%;
+  right: 1%;
   background: none;
   border: none;
   padding: 0;
@@ -32,17 +26,80 @@ html {
 #theme-btn-img {
   vertical-align: middle;
   border-radius: 42.69%;
+  width: 88%;
 }
 
-#nav-links {
-  float: right;
-  margin: 0.69rem 4rem;
-  display: flex;
-  column-gap: 2.2rem;
+@media only screen and (min-width: 690px) {
+  #nav-icon {
+    margin-left: 0.69%;
+    font-size: xx-large;
+  }
+
+  #nav-links {
+    position: absolute;
+    top: 1%;
+    right: 8%;
+  }
+  #nav-links ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+    column-gap: 1.42rem;
+  }
+  #nav-links a {
+    font-size: larger;
+  }
+
+  #borgarbtn {
+    display: none;
+  }
 }
-#nav-links a {
-  text-decoration: none;
-  font-size: larger;
+
+@media only screen and (max-width: 690px) {
+  header {
+    display: grid;
+  }
+  #nav-icon {
+    place-self: center;
+    font-size: xx-large;
+  }
+
+  #borgarbtn {
+    font-size: xx-large;
+    background-color: #a6e22e;
+    border-color: transparent;
+    border-radius: 42.69%;
+    padding: 0 0.69rem 0 0.69rem;
+  }
+
+  #hamborgar {
+    position: absolute;
+    z-index: 69;
+    top: 1.69%;
+    left: 1.42%;
+  }
+
+  .hide-borgar {
+    display: none;
+  }
+
+  .show-hamborgar-bg {
+    position: absolute;
+    z-index: 68;
+    top: -4rem;
+    left: -1.42rem;
+    width: 12rem;
+    height: 22rem;
+    background: radial-gradient(circle, #a6e22e, #a6e22e);
+    border-radius: 69%;
+  }
+
+  #nav-links ul {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    row-gap: 1.42rem;
+  }
 }
 
 #wah {
