--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@ a {
     display: flex;
     justify-content: center;
     column-gap: 6.9%;
-    margin: 8rem 0 12rem 0;
+    margin: 6.9% 0 11.69% 0;
   }
   #portrait {
     width: 42%;
