--- a/css/index.css
+++ b/css/index.css
@@ -10,11 +10,12 @@ img {
 
 /* NAV */
 nav {
-  align-items: center;
+  align-items: baseline;
 }
 nav span {
   font-weight: 600;
   font-size: 2rem;
+  margin: 2rem;
   transition: ease-out 0.69s;
 }
 nav span:hover {
@@ -32,6 +33,25 @@ nav a:hover {
   color: #f29a30;
   transition: ease-in 0.42s;
 }
+
+/* BORGAR */
+@media screen and (max-width: 820px) {
+  #nav-bar {
+    display: none;
+  }
+  #nav-borgar summary {
+    background-color: transparent;
+  }
+  #nav-borgar ul {
+    background-color: transparent;
+  }
+}
+@media screen and (min-width: 821px) {
+  #nav-borgar {
+    display: none;
+  }
+}
+/* ./ BORGAR */
 /* ./ NAV */
 
 /* MAIN */
