--- a/css/index.css
+++ b/css/index.css
@@ -40,10 +40,10 @@ nav a:hover {
     display: none;
   }
   #nav-borgar summary {
-    background-color: transparent;
+    background-color: black;
   }
   #nav-borgar ul {
-    background-color: transparent;
+    background-color: black;
   }
 }
 @media screen and (min-width: 821px) {
@@ -117,7 +117,7 @@ main {
 }
 #languages h {
   font-weight: 200;
-  font-size: 2rem;
+  font-size: 1.42rem;
 }
 #languages p {
   font-weight: 100;
@@ -134,6 +134,6 @@ main {
 }
 #tools h {
   font-weight: 200;
-  font-size: 2rem;
+  font-size: 1.42rem;
 }
 /* ./ TOOLS */
