--- a/css/index.css
+++ b/css/index.css
@@ -1,140 +1,1 @@
-:root {
-    user-select: none;
-    --font-family: "Poppins", sans-serif;
-    background-color: black;
-    color: white;
-}
-img {
-    -webkit-user-drag: none;
-}
-
-/* NAV */
-nav {
-    align-items: baseline;
-}
-nav span {
-    font-weight: 600;
-    font-size: 2rem;
-    margin: 2rem;
-    transition: ease-out 0.69s;
-}
-nav span:hover {
-    color: #575068;
-    transition: ease-in 0.42s;
-}
-nav a {
-    font-weight: 400;
-    font-size: 1.2rem;
-    margin: 1.69rem;
-    color: #ffffff;
-    transition: ease-out 0.69s;
-}
-nav a:hover {
-    color: #f29a30;
-    transition: ease-in 0.42s;
-}
-
-/* BORGAR */
-@media screen and (max-width: 991px) {
-    #nav-bar {
-        display: none;
-    }
-    #nav-borgar summary {
-        background-color: black;
-    }
-    #nav-borgar ul {
-        background-color: black;
-    }
-}
-@media screen and (min-width: 992px) {
-    #nav-borgar {
-        display: none;
-    }
-}
-/* ./ BORGAR */
-/* ./ NAV */
-
-/* MAIN */
-main {
-    text-align: center;
-    padding-top: 4.2vh !important;
-    padding-bottom: 2.4vh !important;
-}
-/* ./ MAIN */
-
-/* HOME */
-#home {
-    align-items: center;
-    justify-items: center;
-}
-#home #portrait {
-    width: 20rem;
-    margin-bottom: 2rem;
-}
-#details {
-    display: flex;
-    flex-direction: column;
-}
-#details p {
-    font-weight: 200;
-    font-size: 1.69rem;
-    margin-bottom: -1.69rem;
-}
-#details h {
-    font-weight: 800;
-    font-size: 4.2rem;
-    color: #575068;
-    transition: ease-in 2.42s;
-}
-#details h:hover {
-    color: #f29a30;
-    transition: ease-out 0.69s;
-}
-#details span {
-    font-weight: 400;
-    font-size: 1.69rem;
-    margin-top: -0.42rem;
-}
-#details span span {
-    color: #e1d8ef;
-    transition: ease-in 2.42s;
-}
-#details span span:hover {
-    color: #575068;
-    transition: ease-out 0.69s;
-}
-#details img {
-    width: 4rem;
-    margin-top: 1rem;
-}
-/* ./ HOME */
-
-/* LANGUAGES */
-#languages {
-    grid-template-columns: auto auto;
-}
-#languages img {
-    width: 4rem;
-}
-#languages h {
-    font-weight: 200;
-    font-size: 1.42rem;
-}
-#languages p {
-    font-weight: 100;
-    font-size: 1rem;
-}
-/* ./ LANGUAGES */
-
-/* TOOLS */
-#tools {
-    grid-template-columns: auto auto;
-}
-#tools img {
-    width: 4.2rem;
-}
-#tools h {
-    font-weight: 200;
-    font-size: 1.42rem;
-}
-/* ./ TOOLS */
+/*! tailwindcss v3.4.0 | MIT License | https://tailwindcss.com*/*,:after,:before{border:0 solid #e5e7eb;box-sizing:border-box}:after,:before{--tw-content:""}:host,html{-webkit-text-size-adjust:100%;font-feature-settings:normal;-webkit-tap-highlight-color:transparent;font-family:ui-sans-serif,system-ui,sans-serif,Apple Color Emoji,Segoe UI Emoji,Segoe UI Symbol,Noto Color Emoji;font-variation-settings:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4}body{line-height:inherit;margin:0}hr{border-top-width:1px;color:inherit;height:0}abbr:where([title]){-webkit-text-decoration:underline dotted;text-decoration:underline dotted}h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight:inherit}a{color:inherit;text-decoration:inherit}b,strong{font-weight:bolder}code,kbd,pre,samp{font-feature-settings:normal;font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,Liberation Mono,Courier New,monospace;font-size:1em;font-variation-settings:normal}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:initial}sub{bottom:-.25em}sup{top:-.5em}table{border-collapse:collapse;border-color:inherit;text-indent:0}button,input,optgroup,select,textarea{font-feature-settings:inherit;color:inherit;font-family:inherit;font-size:100%;font-variation-settings:inherit;font-weight:inherit;line-height:inherit;margin:0;padding:0}button,select{text-transform:none}[type=button],[type=reset],[type=submit],button{-webkit-appearance:button;background-color:initial;background-image:none}:-moz-focusring{outline:auto}:-moz-ui-invalid{box-shadow:none}progress{vertical-align:initial}::-webkit-inner-spin-button,::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}summary{display:list-item}blockquote,dd,dl,figure,h1,h2,h3,h4,h5,h6,hr,p,pre{margin:0}fieldset{margin:0}fieldset,legend{padding:0}menu,ol,ul{list-style:none;margin:0;padding:0}dialog{padding:0}textarea{resize:vertical}input::-moz-placeholder,textarea::-moz-placeholder{color:#9ca3af;opacity:1}input::placeholder,textarea::placeholder{color:#9ca3af;opacity:1}[role=button],button{cursor:pointer}:disabled{cursor:default}audio,canvas,embed,iframe,img,object,svg,video{display:block;vertical-align:middle}img,video{height:auto;max-width:100%}[hidden]{display:none}*,::backdrop,:after,:before{--tw-border-spacing-x:0;--tw-border-spacing-y:0;--tw-translate-x:0;--tw-translate-y:0;--tw-rotate:0;--tw-skew-x:0;--tw-skew-y:0;--tw-scale-x:1;--tw-scale-y:1;--tw-pan-x: ;--tw-pan-y: ;--tw-pinch-zoom: ;--tw-scroll-snap-strictness:proximity;--tw-gradient-from-position: ;--tw-gradient-via-position: ;--tw-gradient-to-position: ;--tw-ordinal: ;--tw-slashed-zero: ;--tw-numeric-figure: ;--tw-numeric-spacing: ;--tw-numeric-fraction: ;--tw-ring-inset: ;--tw-ring-offset-width:0px;--tw-ring-offset-color:#fff;--tw-ring-color:#3b82f680;--tw-ring-offset-shadow:0 0 #0000;--tw-ring-shadow:0 0 #0000;--tw-shadow:0 0 #0000;--tw-shadow-colored:0 0 #0000;--tw-blur: ;--tw-brightness: ;--tw-contrast: ;--tw-grayscale: ;--tw-hue-rotate: ;--tw-invert: ;--tw-saturate: ;--tw-sepia: ;--tw-drop-shadow: ;--tw-backdrop-blur: ;--tw-backdrop-brightness: ;--tw-backdrop-contrast: ;--tw-backdrop-grayscale: ;--tw-backdrop-hue-rotate: ;--tw-backdrop-invert: ;--tw-backdrop-opacity: ;--tw-backdrop-saturate: ;--tw-backdrop-sepia: }.-mt-8{margin-top:-2rem}.mb-24{margin-bottom:6rem}.mt-2{margin-top:.5rem}.flex{display:flex}.size-20{height:5rem;width:5rem}.size-96{height:24rem;width:24rem}.h-20{height:5rem}.flex-col{flex-direction:column}.items-end{align-items:flex-end}.items-center{align-items:center}.justify-between{justify-content:space-between}.justify-around{justify-content:space-around}.justify-evenly{justify-content:space-evenly}.gap-20{gap:5rem}.gap-4{gap:1rem}.bg-ink_black{--tw-bg-opacity:1;background-color:rgb(0 0 0/var(--tw-bg-opacity))}.pt-1{padding-top:.25rem}.text-center{text-align:center}.text-2xl{font-size:1.5rem;line-height:2rem}.text-4xl{font-size:2.25rem;line-height:2.5rem}.text-5xl{font-size:3rem;line-height:1}.text-8xl{font-size:6rem;line-height:1}.text-base{font-size:1rem;line-height:1.5rem}.font-black{font-weight:900}.font-semibold{font-weight:600}.text-ika_purple{--tw-text-opacity:1;color:rgb(87 80 104/var(--tw-text-opacity))}.text-ina_heart{--tw-text-opacity:1;color:rgb(255 255 255/var(--tw-text-opacity))}.text-ina_orange{--tw-text-opacity:1;color:rgb(242 154 48/var(--tw-text-opacity))}.transition-all{transition-duration:.15s;transition-property:all;transition-timing-function:cubic-bezier(.4,0,.2,1)}.duration-2420{transition-duration:2.42s}.duration-690{transition-duration:.69s}.ease-in{transition-timing-function:cubic-bezier(.4,0,1,1)}.hover\:text-ika_purple:hover{--tw-text-opacity:1;color:rgb(87 80 104/var(--tw-text-opacity))}.hover\:text-ina_orange:hover{--tw-text-opacity:1;color:rgb(242 154 48/var(--tw-text-opacity))}.hover\:transition-all:hover{transition-duration:.15s;transition-property:all;transition-timing-function:cubic-bezier(.4,0,.2,1)}.hover\:duration-420:hover{transition-duration:.42s}.hover\:duration-690:hover{transition-duration:.69s}.hover\:ease-out:hover{transition-timing-function:cubic-bezier(0,0,.2,1)}
